--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+html,
+body,
+#root,
+.app-container {
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,7 +25,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.main-content {
+  flex: 1;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -21,14 +36,16 @@ a {
 a:hover {
   color: #535bf2;
 }
-/* 
+
+html,
 body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
   min-height: 100vh;
-} */
+  width: 100%;
+  box-sizing: border-box;
+}
 
 h1 {
   font-size: 3.2em;
@@ -52,6 +69,22 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#root,
+.App {
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+footer {
+  padding: 1em;
+  color: #888;
+  font-size: 0.9em;
+  margin-top: auto;
+  width: 100%;
+  background: transparent;
 }
 
 /*
