--- a/src/components/Review/ReviewList.css
+++ b/src/components/Review/ReviewList.css
@@ -87,10 +87,44 @@
   overflow-wrap: break-word;
 }
 
-.content-section .partical {
+.content-detail .partical {
   max-height: 225px;
   overflow: hidden;
   position: relative;
+}
+
+.content-section .gradient {
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 1;
+  height: 30px;
+  background: linear-gradient(to bottom, rgba(22, 32, 45, 0) 5%, rgba(22, 32, 45, .95) 95%);
+}
+
+.content-detail .posted {
+  margin: 10px 0 8px;
+  font-size: 10px;
+  font-style: italic;
+  color: #626366;
+}
+
+.content-detail .posted .view-more {
+  display: block;
+  float: right;
+  margin-right: 15px;
+  color: #67c1f5;
+  text-transform: uppercase;
+  font-style: normal;
+  cursor: pointer;
+}
+
+
+.content-detail .hr {
+  background-color: #363f4c;
+  height: 1px;
 }
 
 .content-detail .actions-section {
@@ -139,11 +173,12 @@
   background: rgba(103, 193, 245, 0.4);
 }
 
-.actions-section .edit-btn{
+.actions-section .edit-btn {
   color: #f3f3f3;
   cursor: pointer;
   padding: 5px;
 }
+
 /* ReviewList.css */
 .btn-spinner {
   border: 4px solid #f3f3f3;
