--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -4,7 +4,6 @@
   overflow: hidden;
   color: #c7d5e0;
   cursor: pointer;
-  display: flex;
   height: 100%;
 }
 
@@ -15,6 +14,10 @@
 .game-card-thumbnail {
   width: 120px;
   object-fit: cover;
+}
+
+.game-card-info{
+  width: calc(100% - 120px);
 }
 
 .game-card-title {
