--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -200,5 +200,25 @@
   .price-input{
     width: 78% !important;
   }
+  .image-wrapper {
+    position: relative;
+    display: inline-block;
+  }
+  .remove-icon {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    background: #3D4450;
+    border-radius: 10%;
+    padding: 2px 6px;
+    cursor: pointer;
+    display: none;
+  }
+  
+  .image-wrapper:hover .remove-icon {
+    display: block;
+  }
+  
+    
   
   
