Revert "Merge branch 'hoangvufe' into dev"
This reverts commit 3cd27d165d068673989208916e295975b51b502b, reversing
changes made to 2456781d20d83bfca1cd311a76b095f69a3f6aca.

--- a/src/pages/AdminDashboard/GameApprovePage.css
+++ b/src/pages/AdminDashboard/GameApprovePage.css
@@ -2,7 +2,7 @@
 .game-approve-container {
     display: flex;
     flex-direction: column;
-    /* background-color: #1B2438; */
+    background-color: #1B2438;
     color: white;
     padding: 20px;
     max-width: 800px;
@@ -11,11 +11,7 @@
     /*Fixed by Phan NT Son - Make it fit to screen, no more blank under*/
     /* min-height: 100vh;  */
 }
-.game-approve-container p{
-    text-align: center;
-    font-size: 16px;
-    margin-top: 10px;
-}
+
 /* Navigation bar */
 .game-approve-container > div:first-child {
     display: flex;
