Feature: done Friend Page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,16 +46,30 @@
   flex-direction: column;
   background: white;
   position: absolute;
-  top: calc(100% + 10px);
+  top: 100%;
   left: 0;
   z-index: 1000;
-  padding: 5px 10px;
-  border-radius: 4px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+  background: #3D4450;
+  box-shadow: 3px 3px 5px -3px #000;
+  text-align: left;
 }
 
 .nav-user-dropdown-wrapper:hover .nav-box-dropdown {
   display: flex;
+}
+
+.nav-box-dropdown .submenuitem {
+  text-decoration: none;
+  text-transform: none;
+  font-size: 12px;
+  color: #dcdedf;
+  padding: 6px 15px;
+}
+
+.nav-box-dropdown .submenuitem:hover {
+  text-decoration: none;
+  background: #dcdedf;
+  color: #171a21;
 }
 
 
