--- a/src/pages/Friend/FriendPage.css
+++ b/src/pages/Friend/FriendPage.css
@@ -55,8 +55,36 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.friend-page-content .content-right-detail{
+.friend-page-content .content-right-detail {
     transition: opacity 500ms;
     opacity: 1.0;
     margin-top: 24px;
+}
+
+.friend-page-container .fade-in {
+    animation: fadeIn 0.3s ease forwards;
+}
+
+.friend-page-container .fade-out {
+    animation: fadeOut 0.3s ease forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
