--- a/src/pages/Friend/PendingInvitesTab.css
+++ b/src/pages/Friend/PendingInvitesTab.css
@@ -1,3 +1,5 @@
+
+
 .pending-invites-tab .box-title {
     width: 100%;
     padding: 5px 10px;
@@ -22,6 +24,15 @@
 .pending-invites-tab .result {
     display: flex;
     flex-wrap: wrap;
+}
+
+.pending-invites-tab .result-not-found {
+    padding: 16px;
+    font-size: 17px;
+    background: rgba(0, 0, 0, 0.2);
+    color: #969696;
+    margin: 8px 0px 0px 0px;
+    flex-grow: 1;
 }
 
 .pending-invites-tab .box-item {
