--- a/src/pages/Friend/MainTab.css
+++ b/src/pages/Friend/MainTab.css
@@ -86,17 +86,40 @@
 
 .main-tab .friend-item .friend-avatar img {
     width: 100%;
+    height: 100%;
     border-radius: 2px;
     border: none;
     -webkit-user-drag: none;
 }
 
+.main-tab .friend-item .spacer {
+    width: 4px;
+    height: 100%;
+}
+
+.main-tab-body .online{
+    color: #57cbde;
+}
+
+.main-tab-body .offline{
+    color: #898989;
+}
+
+.main-tab-body .online .spacer{
+    background-color: #57cbde;
+}
+
+.main-tab-body .offline .spacer{
+    background-color: #898989;
+}
+
+
 .main-tab .friend-item .friend-name {
-    width: calc(100% - 48px);
+    flex-grow: 1;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     font-size: 14px;
     line-height: 15px;
-    color: #898989;
+    padding-left: 5px;
 }
