fix error and add feedback hub

--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -218,6 +218,29 @@
   .image-wrapper:hover .remove-icon {
     display: block;
   }
+  .tag-selector {
+  width: 80%;
+  }
+  .my-select__control,.my-select__menu,.my-select__menu-list {
+  background-color: #1A1C1F !important; 
+  color: white;
+  }
+  .my-select__option--is-focused {
+  background-color: transparent !important;
+  }
+  .my-select__option:hover{
+    background-color: gray !important;
+  }
+  .my-select__multi-value{
+    background-color: #232529 !important;
+  }
+  .my-select__multi-value__label{
+    color: white !important;
+  }
+
+
+
+
   
     
   
