--- a/src/pages/Community/ChatBodyRight.css
+++ b/src/pages/Community/ChatBodyRight.css
@@ -103,3 +103,67 @@ webkit
     width: 3px;
 
 }
+
+/*
+ENTRY
+*/
+
+.chat-entry {
+    position: relative;
+    background-color: #1b1c20;
+    box-shadow: inset 0px 0px 4px #000;
+    outline-width: 0px;
+    color: #aaa;
+    border: 0px solid transparent;
+    padding-right: 2px;
+}
+
+.chat-entry .chat-entry-control input {
+    resize: none;
+    margin-right: 4px;
+    height: 100%;
+    background-color: transparent;
+    box-shadow: inset 0px 0px 4px transparent;
+    outline-width: 0px;
+    color: #aaa;
+    border: 0px solid transparent;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Motiva Sans", Arial, Helvetica, sans-serif;
+    padding: 4px 4px 4px 8px;
+    flex-shrink: 1;
+    width: 100%;
+}
+
+.chat-entry .chat-entry-actions {
+    align-self: flex-end;
+    height: 100%;
+    transition: background .3s ease;
+}
+
+.chat-entry-actions .actions-btn {
+    background: #24272b;
+    height: 80%;
+    width: 80%;
+}
+
+.chat-entry-actions .actions-btn:hover {
+    cursor: not-allowed;
+}
+
+.chat-entry-actions .actions-btn.active {
+    background: linear-gradient(136deg, #0056d6 1%, #1a9fff 60%);
+}
+
+.chat-entry-actions .actions-btn.active:hover {
+    cursor: pointer;
+}
+
+.SVGIcon_Button {
+    fill: #fff;
+    overflow: visible;
+    width: 100%;
+    height: 100%;
+    max-width: 320px;
+    max-height: 320px;
+}
