WIP: update key visual

--- a/src/pages/Community/ChatBodyLeft.css
+++ b/src/pages/Community/ChatBodyLeft.css
@@ -95,7 +95,7 @@
 
 .friends-list-container .friend-list-content .friend-list-wrapper {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .friend-list-content .friend-list-wrapper .friend {
