--- a/src/components/Notifications/NotificationBox.css
+++ b/src/components/Notifications/NotificationBox.css
@@ -18,6 +18,21 @@
   color: white;
 }
 
+.notifbox-bell.notif {
+  background-color: #5c7e10;
+  color: #fff;
+}
+
+.notifbox-bell.notif:hover {
+  background-color: #7ea64b;
+  transition-property: background;
+  transition-duration: 250ms;
+}
+
+/*
+
+*/
+
 .notifbox-badge {
   position: absolute;
   top: -5px;
@@ -74,7 +89,7 @@
   overflow-y: auto;
 }
 
-.notifbox-list::-webkit-scrollbar{
+.notifbox-list::-webkit-scrollbar {
   display: none;
 }
 
